<resources>
    <string name="app_name">Fish-Info</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="IP_ADDRESS">http://192.168.43.205:8000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name2">FISH-INFO</string>
    <string name="app_name_sms">FISH-INFO SMS</string>


    <string-array name="districts">
        <item>Select District...</item>
        <item>Aizawl</item>
        <item>Kolasib</item>
        <item>Lawngtlai</item>
        <item>Lunglei</item>
        <item>Mamit</item>
        <item>Siaha</item>
        <item>Serchhip</item>
        <item>Champhai</item>
        <item>Hnahthial</item>
        <item>Khawzawl</item>
        <item>Saitual</item>

    </string-array>

    <string name="aizawl">Aizawl</string>
    <string name="kolasib">Kolasib</string>
    <string name="lawngtlai">Lawngtlai</string>
    <string name="lunglei">Lunglei</string>
    <string name="mamit">Mamit</string>
    <string name="siaha">Siaha</string>
    <string name="serchhip">Serchhip</string>
    <string name="champhai">Champhai</string>
    <string name="hnahthial">Hnahthial</string>
    <string name="khawzawl">Khawzawl</string>
    <string name="saitual">Saitual</string>

    <string name="nfdb">NFDB</string>
    <string name="blue_revolution">Blue Revolution</string>
    <string name="rkvy">RKVY</string>
    <string name="nlup">NLUP</string>

    <string name="register_here"><u>Not yet register! Click here</u></string>
    <string name="login_here"><u>Already register. Click here to Login?</u></string>

    <string name="contact_us">Directorate of Fisheries\n
                                New Capital Complex, Khatla\n
                                Aizawl, Mizoram</string>

    //LANGUAGE
    //ENGLISH
    //ERROR
    <string name="errorFathersNameEnglish">Father\'s name not entered</string>
    <string name="errorAddressEnglish">Address not entered</string>
    <string name="errorSelectDistrictEnglish">District not selected</string>
    <string name="errorEpicEnglish">Epic/Aadhaar not entered</string>
    <string name="errorLocationOfPondEnglish">Location of Pond not entered</string>
    <string name="errorTehsilEnglish">Tehsil not selected</string>
    <string name="errorAreaEnglish">Area not entered</string>
    <string name="errorPondsPictureEnglish">Choose atleast one pond picture</string>
    //LABEL
    <string name="labelPersonalInfoEnglish">Personal Information</string>
    <string name="labelLakeInfoEnglish">Lake Information</string>
    <string name="labelUploadPondsPictureEnglish">Upload Ponds Picture</string>
    <string name="labelSaveLocationEnglish">Save Location</string>
    <string name="welcomeEnglish">Welcome</string>

    <string name="uploadYourDataEnglish">Upload Your Data</string>
    <string name="formSubmittedEnglish">Form submitted \nPending Approlval</string>
    <string name="formRejectedEnglish">Form rejected</string>
    <string name="formApprovedEnglish">Form approved</string>
    <string name="serverErrorEnglish">Server error :(</string>

    //HINT
    <string name="hintFathersNameEnglish">Father\'s name</string>
    <string name="hintAddressEnglish">Address</string>
    <string name="hintSelectDistrictEnglish">District</string>
    <string name="hintEpicEnglish">Epic/Aadhaar</string>
    <string name="hintLocationOfPondEnglish">Location of Pond</string>
    <string name="hintTehsilEnglish">Tehsil</string>
    <string name="hintAreaEnglish">Area (in hectares)</string>
    <string name="hintPondsPictureEnglish">Select ponds picture</string>

    //MIZO
    //ERROR
    <string name="errorFathersNameMizo">Pa Hming awm lo</string>
    <string name="errorAddressMizo">Veng leh khua awm lo</string>
    <string name="errorSelectDistrictMizo">District thlang lo</string>
    <string name="errorEpicMizo">Epic/Aadhaar awm lo</string>
    <string name="errorLocationOfPondMizo">Dil awmna hmun awm lo</string>
    <string name="errorTehsilMizo">Tehsil thlang lo</string>
    <string name="errorAreaMizo">Dil zau zawng awm</string>
    <string name="errorPondsPictureMizo">Dil thlalak pakhat tal thlan tur</string>
    //LABEL
    <string name="labelPersonalInfoMizo">Mahni Chanchin</string>
    <string name="labelLakeInfoMizo">Dil Chanchin</string>
    <string name="labelUploadPondsPictureMizo">Dil Thlalak</string>
    <string name="labelSaveLocationMizo">Dil Awmna Hmun</string>

    <string name="uploadYourDataMizo">Form thehluh tur</string>
    <string name="formSubmittedMizo">Form endik turin a awm mek</string>
    <string name="formRejectedMizo">Form hnawl a ni</string>
    <string name="formApprovedMizo">Form endik a ni</string>
    <string name="serverErrorMizo">Khawlpui lam a chiang lo :(</string>

    <string name="welcomeMizo">Chibai</string>

    //HINT
    <string name="hintFathersNameMizo">Pa Hming</string>
    <string name="hintAddressMizo">Khua/Veng</string>
    <string name="hintSelectDistrictMizo">District</string>
    <string name="hintEpicMizo">Epic/Aadhaar</string>
    <string name="hintLocationOfPondMizo">Dil awmna hmun</string>
    <string name="hintTehsilMizo">Tehsil</string>
    <string name="hintAreaMizo">Dil zau zawng (hectares in)</string>
    <string name="hintPondsPictureMizo">Dil Thlalak</string>
</resources>
