<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="District"/>

        <GridLayout
            android:id="@+id/gridlayout1"
            android:layout_below="@id/district"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="6">

            <CheckBox
                android:id="@+id/Aizawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aizawl"/>
            <CheckBox
                android:id="@+id/Kolasib"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kolasib"/>
            <CheckBox
                android:id="@+id/Lawngtlai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawngtlai"/>
            <CheckBox
                android:id="@+id/Lunglei"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunglei"/>
            <CheckBox
                android:id="@+id/Mamit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mamit"/>
            <CheckBox
                android:id="@+id/Siaha"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siaha"/>
            <CheckBox
                android:id="@+id/Serchhip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serchhip"/>
            <CheckBox
                android:id="@+id/Champhai"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champhai"/>
            <CheckBox
                android:id="@+id/Hnahthial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hnahthial"/>
            <CheckBox
                android:id="@+id/Khawzawl"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khawzawl"/>
            <CheckBox
                android:id="@+id/Saitual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saitual"/>


        </GridLayout>


        <LinearLayout
            android:id="@+id/breaker"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B6B6B6"
            android:layout_below="@+id/gridlayout1"
            android:orientation="vertical"/>


        <TextView
            android:id="@+id/scheme"
            android:layout_below="@id/breaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Scheme"/>
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/list_of_scheme"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_fisheries"
            android:layout_height="wrap_content"
            android:layout_below="@id/scheme"
            android:layout_marginBottom="@dimen/farmer_data_upload_space_between_edittext"/>



    </RelativeLayout>

</ScrollView>

